@@ -35,13 +35,12 @@ import java.util.List;
 import java.util.Objects;
 import jenkins.model.DirectlyModifiableTopLevelItemGroup;
 import jenkins.model.Jenkins;
-import org.apache.commons.lang.StringUtils;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.stapler.AncestorInPath;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 /**
  * {@link Descriptor} for {@link View}.
@@ -89,8 +88,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
     @Restricted(DoNotUse.class)
     public AutoCompletionCandidates doAutoCompleteCopyNewItemFrom(@QueryParameter final String value, @AncestorInPath ItemGroup<?> container) {
         AutoCompletionCandidates candidates = AutoCompletionCandidates.ofJobNames(TopLevelItem.class, value, container);
-        if (container instanceof DirectlyModifiableTopLevelItemGroup) {
-            DirectlyModifiableTopLevelItemGroup modifiableContainer = (DirectlyModifiableTopLevelItemGroup) container;
+        if (container instanceof DirectlyModifiableTopLevelItemGroup modifiableContainer) {
             Iterator<String> it = candidates.getValues().iterator();
             while (it.hasNext()) {
                 TopLevelItem item = Jenkins.get().getItem(it.next(), container, TopLevelItem.class);
@@ -109,7 +107,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ListViewColumnDescriptor}s that can be used with this view.
      */
     public List<Descriptor<ListViewColumn>> getColumnsDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ListViewColumn.all())
@@ -122,7 +120,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ViewJobFilter} types that can be used with this view.
      */
     public List<Descriptor<ViewJobFilter>> getJobFiltersDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ViewJobFilter.all())
@@ -141,7 +139,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      */
     @SuppressWarnings("unused") // expose utility check method to subclasses
     protected FormValidation checkDisplayName(@NonNull View view, @CheckForNull String value) {
-        if (StringUtils.isBlank(value)) {
+        if (value == null || value.isBlank()) {
             // no custom name, no need to check
             return FormValidation.ok();
         }
