@@ -30,9 +30,6 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.model.AbstractBuild;
 import hudson.model.Job;
 import hudson.model.ParameterValue;
-import hudson.model.ParametersAction;
-import hudson.model.Queue;
-import hudson.model.Run;
 import hudson.search.UserSearchProperty;
 import hudson.util.Iterators;
 import hudson.widgets.HistoryWidget;
@@ -43,11 +40,13 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
+import jenkins.model.HistoricalBuild;
 import jenkins.model.queue.QueueItem;
 
 /**
  * History page filter.
- *
+ * @param <T> typically {@link HistoricalBuild}
  * @author <a href="mailto:tom.fennelly@gmail.com">tom.fennelly@gmail.com</a>
  */
 public class HistoryPageFilter<T> {
@@ -57,21 +56,22 @@ public class HistoryPageFilter<T> {
     private Long olderThan;
     private String searchString;
 
-    // Need to use different Lists for QueueItem and Runs because
+    // Need to use different Lists for QueueItem and HistoricalBuilds because
     // we need access to them separately in the jelly files for rendering.
     public final List<HistoryPageEntry<QueueItem>> queueItems = new ArrayList<>();
-    public final List<HistoryPageEntry<Run>> runs = new ArrayList<>();
+    public final List<HistoryPageEntry<HistoricalBuild>> runs = new ArrayList<>();
 
-    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
+    @SuppressFBWarnings(value = {"PA_PUBLIC_PRIMITIVE_ATTRIBUTE", "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"}, justification = "Preserve API compatibility; read by Stapler")
     public boolean hasUpPage = false; // there are newer builds than on this page
-    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
+    @SuppressFBWarnings(value = {"PA_PUBLIC_PRIMITIVE_ATTRIBUTE", "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"}, justification = "Preserve API compatibility; read by Stapler")
     public boolean hasDownPage = false; // there are older builds than on this page
-    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
+    @SuppressFBWarnings(value = {"PA_PUBLIC_PRIMITIVE_ATTRIBUTE", "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD"}, justification = "Preserve API compatibility; read by Stapler")
     public long nextBuildNumber;
-    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
     public HistoryWidget widget;
 
+    @SuppressFBWarnings(value = "PA_PUBLIC_PRIMITIVE_ATTRIBUTE", justification = "Preserve API compatibility")
     public long newestOnPage = Long.MIN_VALUE; // see updateNewestOldest()
+    @SuppressFBWarnings(value = "PA_PUBLIC_PRIMITIVE_ATTRIBUTE", justification = "Preserve API compatibility")
     public long oldestOnPage = Long.MAX_VALUE; // see updateNewestOldest()
 
     /**
@@ -230,25 +230,18 @@ public class HistoryPageFilter<T> {
         // Queue items can start building out of order with how they got added to the queue. Sorting them
         // before adding to the page. They'll still get displayed before the building items coz they end
         // up in a different list in HistoryPageFilter.
-        items.sort(new Comparator<Object>() {
-            @Override
-            public int compare(Object o1, Object o2) {
-                long o1QID = HistoryPageEntry.getEntryId(o1);
-                long o2QID = HistoryPageEntry.getEntryId(o2);
+        items.sort((Comparator<Object>) (o1, o2) -> {
+            long o1QID = HistoryPageEntry.getEntryId(o1);
+            long o2QID = HistoryPageEntry.getEntryId(o2);
 
-                return Long.compare(o2QID, o1QID);
-            }
+            return Long.compare(o2QID, o1QID);
         });
     }
 
     private long getNextBuildNumber(@NonNull Object entry) {
-        if (entry instanceof QueueItem) {
-            Queue.Task task = ((QueueItem) entry).getTask();
-            if (task instanceof Job) {
-                return ((Job) task).getNextBuildNumber();
-            }
-        } else if (entry instanceof Run) {
-            return ((Run) entry).getParent().getNextBuildNumber();
+        // TODO refactor into method on HistoryWidget
+        if (widget != null && widget.owner instanceof Job job) {
+            return job.getNextBuildNumber();
         }
 
         // TODO maybe this should be an error?
@@ -261,12 +254,13 @@ public class HistoryPageFilter<T> {
         updateNewestOldest(entry.getEntryId());
     }
 
-    private void addRun(Run run) {
-        HistoryPageEntry<Run> entry = new HistoryPageEntry<>(run);
+    private void addRun(HistoricalBuild run) {
+        HistoryPageEntry<HistoricalBuild> entry = new HistoryPageEntry<>(run);
         // Assert that runs have been added in descending order
-        if (runs.size() > 0) {
-            if (entry.getEntryId() > runs.get(runs.size() - 1).getEntryId()) {
-                throw new IllegalStateException("Runs were out of order");
+        if (!runs.isEmpty()) {
+            if (entry.getEntryId() > runs.getLast().getEntryId()) {
+                throw new IllegalStateException("Cannot add newer " + run + " to descending-order list " +
+                    runs.stream().map(HistoryPageEntry::getEntry).collect(Collectors.toList()));
             }
         }
         runs.add(entry);
@@ -281,15 +275,13 @@ public class HistoryPageFilter<T> {
     private boolean add(Object entry) {
         // Purposely not calling isFull(). May need to add a greater number of entries
         // to the page initially, newerThan then cutting it back down to size using cutLeading()
-        if (entry instanceof QueueItem) {
-            QueueItem item = (QueueItem) entry;
+        if (entry instanceof QueueItem item) {
             if (searchString != null && !fitsSearchParams(item)) {
                 return false;
             }
             addQueueItem(item);
             return true;
-        } else if (entry instanceof Run) {
-            Run run = (Run) entry;
+        } else if (entry instanceof HistoricalBuild run) {
             if (searchString != null && !fitsSearchParams(run)) {
                 return false;
             }
@@ -322,7 +314,7 @@ public class HistoryPageFilter<T> {
         return false;
     }
 
-    private boolean fitsSearchParams(@NonNull Run run) {
+    private boolean fitsSearchParams(@NonNull HistoricalBuild run) {
         if (searchString == null) {
             return true;
         }
@@ -340,8 +332,8 @@ public class HistoryPageFilter<T> {
         } else if (run instanceof AbstractBuild && fitsSearchBuildVariables((AbstractBuild) run)) {
             return true;
         } else {
-            ParametersAction parametersAction = run.getAction(ParametersAction.class);
-            if (parametersAction != null && fitsSearchBuildParameters(parametersAction)) {
+            List<ParameterValue> parameters = run.getParameterValues();
+            if (fitsSearchBuildParameters(parameters)) {
                 return true;
             }
         }
@@ -381,8 +373,7 @@ public class HistoryPageFilter<T> {
         return false;
     }
 
-    private boolean fitsSearchBuildParameters(ParametersAction parametersAction) {
-        List<ParameterValue> parameters = parametersAction.getParameters();
+    private boolean fitsSearchBuildParameters(List<ParameterValue> parameters) {
         for (ParameterValue parameter : parameters) {
             if (!parameter.isSensitive() && fitsSearchString(parameter.getValue())) {
                 return true;
