@@ -24,22 +24,26 @@
 
 package lib.form;
 
+import static java.nio.file.Files.readString;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
+import hudson.Extension;
 import hudson.FilePath;
 import hudson.Launcher;
 import hudson.cli.CopyJobCommand;
 import hudson.cli.GetJobCommand;
+import hudson.cli.GetNodeCommand;
+import hudson.cli.GetViewCommand;
 import hudson.model.AbstractProject;
 import hudson.model.Action;
 import hudson.model.Computer;
@@ -48,56 +52,83 @@ import hudson.model.Item;
 import hudson.model.Job;
 import hudson.model.JobProperty;
 import hudson.model.JobPropertyDescriptor;
+import hudson.model.ListView;
+import hudson.model.Node;
 import hudson.model.RootAction;
 import hudson.model.Run;
 import hudson.model.TaskListener;
 import hudson.model.User;
+import hudson.model.View;
+import hudson.model.ViewProperty;
+import hudson.security.ACL;
+import hudson.slaves.DumbSlave;
+import hudson.slaves.NodeProperty;
+import hudson.slaves.NodePropertyDescriptor;
 import hudson.tasks.BuildStepDescriptor;
 import hudson.tasks.Builder;
 import hudson.util.FormValidation;
 import hudson.util.Secret;
+import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
+import java.io.StringReader;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.regex.Pattern;
+import javax.xml.transform.stream.StreamSource;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.Jenkins;
 import jenkins.model.TransientActionFactory;
+import jenkins.security.ExtendedReadRedaction;
+import jenkins.security.ExtendedReadSecretRedaction;
 import jenkins.tasks.SimpleBuildStep;
+import org.htmlunit.HttpMethod;
 import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.WebResponse;
 import org.htmlunit.html.DomElement;
 import org.htmlunit.html.HtmlHiddenInput;
 import org.htmlunit.html.HtmlInput;
 import org.htmlunit.html.HtmlPage;
 import org.htmlunit.html.HtmlTextInput;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.jvnet.hudson.test.For;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.springframework.security.core.Authentication;
 
-public class PasswordTest {
+@WithJenkins
+class PasswordTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Test
-    public void secretNotPlainText() throws Exception {
+    void secretNotPlainText() throws Exception {
         SecretNotPlainText.secret = Secret.fromString("secret");
         HtmlPage p = j.createWebClient().goTo("secretNotPlainText");
         String value = ((HtmlInput) p.getElementById("password")).getValue();
-        assertNotEquals("password shouldn't be plain text", "secret", value);
+        assertNotEquals("secret", value, "password shouldn't be plain text");
         assertEquals("secret", Secret.fromString(value).getPlainText());
     }
 
@@ -122,9 +153,325 @@ public class PasswordTest {
         }
     }
 
+    @For({ExtendedReadRedaction.class, ExtendedReadSecretRedaction.class})
+    @Issue("SECURITY-3495")
+    @Test
+    void testNodeSecrets() throws Exception {
+        Computer.EXTENDED_READ.setEnabled(true);
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("alice").grant(Jenkins.READ, Computer.EXTENDED_READ).everywhere().to("bob"));
+
+        final DumbSlave onlineSlave = j.createOnlineSlave();
+        final String secretText = "t0ps3cr3td4t4_node";
+        final Secret encryptedSecret = Secret.fromString(secretText);
+        final String encryptedSecretText = encryptedSecret.getEncryptedValue();
+
+        onlineSlave.getNodeProperties().add(new NodePropertyWithSecret(encryptedSecret));
+        onlineSlave.save();
+
+        assertThat(readString(new File(onlineSlave.getRootDir(), "config.xml").toPath()), containsString(encryptedSecretText));
+
+
+        { // admin can see encrypted value
+            GetNodeCommand command = new GetNodeCommand();
+            try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+                final Page page = wc.goTo(onlineSlave.getComputer().getUrl() + "config.xml", "application/xml");
+                final String content = page.getWebResponse().getContentAsString();
+
+                assertThat(content, not(containsString(secretText)));
+                assertThat(content, containsString(encryptedSecretText));
+                assertThat(content, containsString("<secret>" + encryptedSecretText + "</secret>"));
+
+                var baos = new ByteArrayOutputStream();
+                try (var unused = ACL.as(User.get("alice", true, Map.of()))) {
+                    command.setTransportAuth2(Jenkins.getAuthentication2());
+                    command.main(List.of(onlineSlave.getNodeName()), Locale.US, System.in, new PrintStream(baos), System.err);
+                }
+                assertEquals(content, baos.toString(page.getWebResponse().getContentCharset()));
+            }
+        }
+
+        { // extended reader gets only redacted value
+            GetNodeCommand command = new GetNodeCommand();
+            try (JenkinsRule.WebClient wc = j.createWebClient().login("bob")) {
+                final Page page = wc.goTo(onlineSlave.getComputer().getUrl() + "config.xml", "application/xml");
+                final String content = page.getWebResponse().getContentAsString();
+
+                assertThat(content, not(containsString(secretText)));
+                assertThat(content, not(containsString(encryptedSecretText)));
+                assertThat(content, containsString("<secret>********</secret>"));
+
+                var baos = new ByteArrayOutputStream();
+                try (var unused = ACL.as(User.get("bob", true, Map.of()))) {
+                    command.setTransportAuth2(Jenkins.getAuthentication2());
+                    command.main(List.of(onlineSlave.getNodeName()), Locale.US, System.in, new PrintStream(baos), System.err);
+                }
+                assertEquals(content, baos.toString(page.getWebResponse().getContentCharset()));
+            }
+        }
+    }
+
+    @For({ExtendedReadRedaction.class, ExtendedReadSecretRedaction.class})
+    @Issue("SECURITY-3513")
+    @Test
+    void testCopyNodeSecrets() throws Exception {
+        Computer.EXTENDED_READ.setEnabled(true);
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        MockAuthorizationStrategy mockAuthorizationStrategy = new MockAuthorizationStrategy();
+        mockAuthorizationStrategy.grant(Jenkins.READ, Computer.CREATE, Computer.CONFIGURE).everywhere().to("alice");
+        mockAuthorizationStrategy.grant(Jenkins.READ, Computer.CREATE, Computer.EXTENDED_READ).everywhere().to("bob");
+        j.jenkins.setAuthorizationStrategy(mockAuthorizationStrategy);
+
+        final DumbSlave onlineSlave = j.createOnlineSlave();
+        final String secretText = "t0ps3cr3td4t4_node";
+        final Secret encryptedSecret = Secret.fromString(secretText);
+        final String encryptedSecretText = encryptedSecret.getEncryptedValue();
+
+        onlineSlave.getNodeProperties().add(new NodePropertyWithSecret(encryptedSecret));
+        onlineSlave.save();
+
+        assertThat(readString(new File(onlineSlave.getRootDir(), "config.xml").toPath()), containsString(encryptedSecretText));
+        assertEquals(2, j.getInstance().getComputers().length);
+
+        String agentCopyURL = j.getURL() + "/computer/createItem?mode=copy&from=" + onlineSlave.getNodeName() + "&name=";
+
+        { // with configure, you can copy a node containing secrets
+            try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+                WebResponse rsp = wc.getPage(wc.addCrumb(new WebRequest(new URL(agentCopyURL + "aliceAgent"),
+                        HttpMethod.POST))).getWebResponse();
+                assertEquals(200, rsp.getStatusCode());
+                assertEquals(3, j.getInstance().getComputers().length);
+
+                final Page page = wc.goTo("computer/aliceAgent/config.xml", "application/xml");
+                final String content = page.getWebResponse().getContentAsString();
+
+                assertThat(content, not(containsString(secretText)));
+                assertThat(content, containsString(encryptedSecretText));
+                assertThat(content, containsString("<secret>" + encryptedSecretText + "</secret>"));
+            }
+        }
+
+        { // without configure, you cannot copy a node containing secrets
+            try (JenkinsRule.WebClient wc = j.createWebClient().withThrowExceptionOnFailingStatusCode(false).login("bob")) {
+                WebResponse rsp = wc.getPage(wc.addCrumb(new WebRequest(new URL(agentCopyURL + "bobAgent"),
+                        HttpMethod.POST))).getWebResponse();
+
+                assertEquals(403, rsp.getStatusCode());
+                assertThat(rsp.getContentAsString(), containsString("May not copy " + onlineSlave.getNodeName() + " as it contains secrets"));
+                assertEquals(3, j.getInstance().getComputers().length);
+            }
+        }
+    }
+
+    public static class NodePropertyWithSecret extends NodeProperty<Node> {
+        private final Secret secret;
+
+        @SuppressWarnings("checkstyle:redundantmodifier")
+        @DataBoundConstructor
+        public NodePropertyWithSecret(Secret secret) {
+            this.secret = secret;
+        }
+
+        public Secret getSecret() {
+            return secret;
+        }
+
+        @Extension
+        public static class DescriptorImpl extends NodePropertyDescriptor {
+
+        }
+    }
+
+    @For({ExtendedReadRedaction.class, ExtendedReadSecretRedaction.class})
+    @Issue("SECURITY-3496")
+    @Test
+    void testViewSecrets() throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("alice").grant(Jenkins.READ, View.READ).everywhere().to("bob"));
+
+        final String secretText = "t0ps3cr3td4t4_view";
+        final Secret encryptedSecret = Secret.fromString(secretText);
+        final String encryptedSecretText = encryptedSecret.getEncryptedValue();
+
+        final ListView v = new ListView("security-3496");
+        v.getProperties().add(new ViewPropertyWithSecret(encryptedSecret));
+        j.jenkins.addView(v);
+
+        assertThat(readString(new File(j.jenkins.getRootDir(), "config.xml").toPath()), containsString(encryptedSecretText));
+
+
+        { // admin can see encrypted value
+            var command = new GetViewCommand();
+            try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+                final Page page = wc.goTo(v.getUrl() + "config.xml", "application/xml");
+                final String content = page.getWebResponse().getContentAsString();
+
+                assertThat(content, not(containsString(secretText)));
+                assertThat(content, containsString(encryptedSecretText));
+                assertThat(content, containsString("<secret>" + encryptedSecretText + "</secret>"));
+
+                var baos = new ByteArrayOutputStream();
+                try (var unused = ACL.as(User.get("alice", true, Map.of()))) {
+                    command.setTransportAuth2(Jenkins.getAuthentication2());
+                    command.main(List.of(v.getViewName()), Locale.US, System.in, new PrintStream(baos), System.err);
+                }
+                assertEquals(content, baos.toString(page.getWebResponse().getContentCharset()));
+            }
+        }
+
+        { // extended reader gets only redacted value
+            var command = new GetViewCommand();
+            try (JenkinsRule.WebClient wc = j.createWebClient().login("bob")) {
+                final Page page = wc.goTo(v.getUrl() + "config.xml", "application/xml");
+                final String content = page.getWebResponse().getContentAsString();
+
+                assertThat(content, not(containsString(secretText)));
+                assertThat(content, not(containsString(encryptedSecretText)));
+                assertThat(content, containsString("<secret>********</secret>"));
+
+                var baos = new ByteArrayOutputStream();
+                try (var unused = ACL.as(User.get("bob", true, Map.of()))) {
+                    command.setTransportAuth2(Jenkins.getAuthentication2());
+                    command.main(List.of(v.getViewName()), Locale.US, System.in, new PrintStream(baos), System.err);
+                }
+                assertEquals(content, baos.toString(page.getWebResponse().getContentCharset()));
+            }
+        }
+    }
+
+    public static class ViewPropertyWithSecret extends ViewProperty {
+        private final Secret secret;
+
+        @SuppressWarnings("checkstyle:redundantmodifier")
+        public ViewPropertyWithSecret(Secret secret) {
+            this.secret = secret;
+        }
+
+        public Secret getSecret() {
+            return secret;
+        }
+    }
+
+    @Issue("SECURITY-3744")
+    @Test
+    void testJobGetConfigXmlAfterRawSubmission() throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("alice").grant(Jenkins.READ, Item.READ, Item.EXTENDED_READ).everywhere().to("bob"));
+        final FreeStyleProject freeStyleProject = j.createFreeStyleProject();
+        freeStyleProject.getBuildersList().add(new SecretBuilder(Secret.fromString("t0ps3cr3t")));
+        String xmlString;
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(freeStyleProject.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t")));
+        }
+        // Now write the job config with a raw string secret
+        xmlString = xmlString.replaceAll("<secret>[{][^}]+[}]</secret>", "<secret>t0ps3cr3t</secret>");
+        assertThat(xmlString, containsString("<secret>t0ps3cr3t</secret>"));
+        freeStyleProject.updateByXml(new StreamSource(new StringReader(xmlString)));
+        assertThat(freeStyleProject.getConfigFile().asString(), not(containsString("t0ps3cr3t")));
+
+        // still encrypted through the API
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(freeStyleProject.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t")));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("bob")) {
+            final Page page = wc.goTo(freeStyleProject.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t")));
+            assertThat(xmlString, containsString("<secret>********</secret>"));
+        }
+    }
+
+    @Test
+    void testNodeGetConfigXmlAfterRawSubmission() throws Exception {
+        Computer.EXTENDED_READ.setEnabled(true);
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("alice").grant(Jenkins.READ, Computer.EXTENDED_READ).everywhere().to("bob"));
+
+        final DumbSlave onlineAgent = j.createOnlineSlave();
+        onlineAgent.getNodeProperties().add(new NodePropertyWithSecret(Secret.fromString("t0ps3cr3t_node")));
+        onlineAgent.save();
+
+        String xmlString;
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(onlineAgent.getComputer().getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_node")));
+        }
+        // Now write the node config with a raw string secret
+        xmlString = xmlString.replaceAll("<secret>[{][^}]+[}]</secret>", "<secret>t0ps3cr3t_node</secret>");
+        assertThat(xmlString, containsString("<secret>t0ps3cr3t_node</secret>"));
+        onlineAgent.getComputer().updateByXml(new ByteArrayInputStream(xmlString.getBytes(StandardCharsets.UTF_8)));
+        assertThat(j.jenkins.getNodesObject().getConfigFile(onlineAgent).asString(), not(containsString("t0ps3cr3t_node")));
+
+        // still encrypted through the API
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(onlineAgent.getComputer().getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_node")));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("bob")) {
+            final Page page = wc.goTo(onlineAgent.getComputer().getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_node")));
+            assertThat(xmlString, containsString("<secret>********</secret>"));
+        }
+    }
+
+    @Test
+    void testViewGetConfigXmlAfterRawSubmission() throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("alice").grant(Jenkins.READ, View.READ).everywhere().to("bob"));
+
+        final ListView view = new ListView("security-3744-view");
+        view.getProperties().add(new ViewPropertyWithSecret(Secret.fromString("t0ps3cr3t_view")));
+        j.jenkins.addView(view);
+
+        String xmlString;
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(view.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_view")));
+        }
+        // Now write the view config with a raw string secret
+        xmlString = xmlString.replaceAll("<secret>[{][^}]+[}]</secret>", "<secret>t0ps3cr3t_view</secret>");
+        assertThat(xmlString, containsString("<secret>t0ps3cr3t_view</secret>"));
+        view.updateByXml(new StreamSource(new StringReader(xmlString)));
+
+        // still encrypted through the API
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("alice")) {
+            final Page page = wc.goTo(view.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_view")));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().login("bob")) {
+            final Page page = wc.goTo(view.getUrl() + "config.xml", "application/xml");
+            xmlString = page.getWebResponse().getContentAsString();
+            assertThat(xmlString, not(containsString("t0ps3cr3t_view")));
+            assertThat(xmlString, containsString("<secret>********</secret>"));
+        }
+    }
+
+    public static class SecretBuilder extends Builder {
+        private final Secret secret;
+
+        @SuppressWarnings("checkstyle:redundantmodifier")
+        public SecretBuilder(Secret secret) {
+            this.secret = secret;
+        }
+
+        public Secret getSecret() {
+            return secret;
+        }
+    }
+
     @Issue({"SECURITY-266", "SECURITY-304"})
     @Test
-    public void testExposedCiphertext() throws Exception {
+    @For(ExtendedReadSecretRedaction.class)
+    void testExposedCiphertext() throws Exception {
         boolean saveEnabled = Item.EXTENDED_READ.getEnabled();
         Item.EXTENDED_READ.setEnabled(true);
         try {
@@ -211,7 +558,7 @@ public class PasswordTest {
 
     @Test
     @Issue("SECURITY-616")
-    public void testCheckMethod() throws Exception {
+    void testCheckMethod() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject("p");
         p.addProperty(new VulnerableProperty(null));
         HtmlTextInput field = j.createWebClient().getPage(p, "configure").getFormByName("config").getInputByName("_.secret");
@@ -233,6 +580,7 @@ public class PasswordTest {
     public static class VulnerableProperty extends JobProperty<FreeStyleProject> {
         public final Secret secret;
 
+        @SuppressWarnings("checkstyle:redundantmodifier")
         @DataBoundConstructor
         public VulnerableProperty(Secret secret) {
             this.secret = secret;
@@ -244,7 +592,7 @@ public class PasswordTest {
             static String checkedSecret;
 
             public FormValidation doCheckSecret(@QueryParameter String value) {
-                StaplerRequest req = Stapler.getCurrentRequest();
+                StaplerRequest2 req = Stapler.getCurrentRequest2();
                 incomingURL = req.getRequestURIWithQueryString();
                 System.err.println("processing " + incomingURL + " via " + req.getMethod() + ": " + value);
                 checkedSecret = value;
@@ -254,7 +602,7 @@ public class PasswordTest {
     }
 
     @Test
-    public void testBackgroundSecretConversion() throws Exception {
+    void testBackgroundSecretConversion() throws Exception {
         final JenkinsRule.WebClient wc = j.createWebClient();
         j.configRoundtrip();
         // empty default values
@@ -345,7 +693,7 @@ public class PasswordTest {
     }
 
     @Test
-    public void testBuildStep() throws Exception {
+    void testBuildStep() throws Exception {
         final FreeStyleProject project = j.createFreeStyleProject();
         project.getBuildersList().add(new PasswordHolderBuildStep());
         project.save();
@@ -353,7 +701,7 @@ public class PasswordTest {
         j.configRoundtrip(project);
 
         // empty default values after initial form submission
-        PasswordHolderBuildStep buildStep = (PasswordHolderBuildStep) project.getBuildersList().get(0);
+        PasswordHolderBuildStep buildStep = (PasswordHolderBuildStep) project.getBuildersList().getFirst();
         assertNotNull(buildStep);
         assertEquals("", buildStep.secretWithSecretGetterSecretSetter.getPlainText());
         assertEquals("", buildStep.secretWithSecretGetterStringSetter.getPlainText());
@@ -364,7 +712,7 @@ public class PasswordTest {
         assertEquals("", buildStep.stringWithStringGetterSecretSetter);
         assertEquals("", buildStep.stringWithStringGetterStringSetter);
 
-        buildStep = (PasswordHolderBuildStep) project.getBuildersList().get(0);
+        buildStep = (PasswordHolderBuildStep) project.getBuildersList().getFirst();
         assertNotNull(buildStep);
 
 
@@ -406,7 +754,7 @@ public class PasswordTest {
         assertTrue(i >= 8); // at least 8 password fields expected on that job config form
 
         j.configRoundtrip(project);
-        buildStep = (PasswordHolderBuildStep) project.getBuildersList().get(0);
+        buildStep = (PasswordHolderBuildStep) project.getBuildersList().getFirst();
 
         // confirm round-trip did not change effective values
         assertEquals("secretWithSecretGetterSecretSetter", buildStep.secretWithSecretGetterSecretSetter.getPlainText());
@@ -457,6 +805,7 @@ public class PasswordTest {
         private String stringWithStringGetterSecretSetter;
         private String stringWithSecretGetterSecretSetter;
 
+        @SuppressWarnings("checkstyle:redundantmodifier")
         @DataBoundConstructor
         public PasswordHolderBuildStep() {
             // data binding
@@ -550,7 +899,7 @@ public class PasswordTest {
     }
 
     @Test
-    public void testStringlyTypedSecrets() throws Exception {
+    void testStringlyTypedSecrets() throws Exception {
         final FreeStyleProject project = j.createFreeStyleProject();
         project.getBuildersList().add(new StringlyTypedSecretsBuilder(""));
         project.save();
@@ -558,7 +907,7 @@ public class PasswordTest {
         j.configRoundtrip(project);
 
         // empty default values after initial form submission
-        StringlyTypedSecretsBuilder buildStep = (StringlyTypedSecretsBuilder) project.getBuildersList().get(0);
+        StringlyTypedSecretsBuilder buildStep = (StringlyTypedSecretsBuilder) project.getBuildersList().getFirst();
         assertNotNull(buildStep);
         assertTrue(buildStep.mySecret.startsWith("{"));
         assertTrue(buildStep.mySecret.endsWith("}"));
@@ -582,7 +931,7 @@ public class PasswordTest {
         }
 
         j.configRoundtrip(project);
-        buildStep = (StringlyTypedSecretsBuilder) project.getBuildersList().get(0);
+        buildStep = (StringlyTypedSecretsBuilder) project.getBuildersList().getFirst();
 
         // confirm round-trip did not change effective values
         assertEquals("stringlyTypedSecret", Secret.fromString(buildStep.mySecret).getPlainText());
@@ -596,6 +945,7 @@ public class PasswordTest {
 
         private String mySecret;
 
+        @SuppressWarnings("checkstyle:redundantmodifier")
         @DataBoundConstructor
         public StringlyTypedSecretsBuilder(String mySecret) {
             this.mySecret = Secret.fromString(mySecret).getEncryptedValue();
@@ -621,7 +971,7 @@ public class PasswordTest {
     }
 
     @Test
-    public void testBlankoutOfStringBackedPasswordFieldWithoutItemConfigure() throws Exception {
+    void testBlankoutOfStringBackedPasswordFieldWithoutItemConfigure() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
         JenkinsRule.WebClient wc = j.createWebClient();
         HtmlPage htmlPage = wc.goTo(p.getUrl() + "/passwordFields");
@@ -693,7 +1043,7 @@ public class PasswordTest {
     }
 
     @Test
-    public void computerExtendedReadNoSecretsRevealed() throws Exception {
+    void computerExtendedReadNoSecretsRevealed() throws Exception {
         Computer computer = j.jenkins.getComputers()[0];
         computer.addAction(new SecuredAction());
 
